# mp3-to-spotify-playlist

./: .gitignore  mp3s-to-spotify-playlist.py  pyproject.toml
