[tool.poetry]
name = "mp3-to-spotify-playlist"
version = "0.1.0"
description = ""
authors = ["Roy B. <royutil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.23.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
